solved image not showing issue

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
-    background-image: url("assets/user_profile.jpg");
+    background-image: url("Assets/user_profile.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
